fix icon wrap on small mobile

--- a/src/components/quarks/SelectEmotion/styles.scss
+++ b/src/components/quarks/SelectEmotion/styles.scss
@@ -38,5 +38,6 @@
     &__list {
         display: flex;
         align-items: center;
+        flex-wrap: wrap;
     }
 }
